--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -3,6 +3,7 @@ name: Scheduled online check
 on:
   push:
     branches:
+      - main
       - master
     paths:
       - .github/workflows/scheduled.yml
