--- a/audit_exceptions/github_prerelease_allowlist.json
+++ b/audit_exceptions/github_prerelease_allowlist.json
@@ -63,6 +63,7 @@
   "themeengine": "all",
   "universal-android-debloater": "all",
   "utm@beta": "any",
+  "vibetunnel": "any",
   "virtualbuddy@beta": "all",
   "wezterm@nightly": "all",
   "xit": "all",
