audit_exceptions/github_prerelease_allowlist.json: add jordanbaird-ice@beta

--- a/audit_exceptions/github_prerelease_allowlist.json
+++ b/audit_exceptions/github_prerelease_allowlist.json
@@ -33,6 +33,7 @@
   "insomnia@alpha": "any",
   "irccloud": "all",
   "jenkins-menu": "all",
+  "jordanbaird-ice@beta": "any",
   "keka@beta": "any",
   "kitty@nightly": "all",
   "macfuse@dev": "any",
